# up-core-api

./: .gitignore  CMakeLists.txt  README.adoc  conanfile.txt  main.cpp  pom.xml  saved-settings.xml.1  settings.xml
.github/workflows/: build-deploy.yml  build-github-package.yml  build_and_test.yml  build_deploy.yml  maven-publish.yml  release-maven-central.yml  release.yml
src/main/proto/: README.adoc  file.proto  options.proto  serializationhint.proto  test.proto  topic.proto  uattributes.proto  umessage.proto  units.proto  upayload.proto  uri.proto  ustatus.proto  uuid.proto
src/main/proto/core/: README.adoc
src/main/proto/core/udiscovery/v2/: udiscovery.proto
src/main/proto/core/udiscovery/v3/: udiscovery.proto
src/main/proto/core/usubscription/v2/: usubscription.proto
src/main/proto/core/usubscription/v3/: usubscription.proto
src/main/proto/core/utwin/v1/: utwin.proto
uprotocol/: README.adoc  topic.proto  uattributes.proto  umessage.proto  upayload.proto  uprotocol_options.proto  uri.proto  utopic.proto
uprotocol/core/udiscovery/v3/: udiscovery.proto
uprotocol/core/usubscription/v3/: usubscription.proto
uprotocol/core/utwin/v1/: utwin.proto
uprotocol/example/hello_world/v1/: hello_world.proto
